# armstrong-hs

./: .gitignore  Armstrong.cabal
app/: Armstrong.hs  Main.hs
