cabal-version:      2.4
name:               Armstrong
version:            0.1.0.0

author:             Jakub Karbowski
maintainer:         carbon@student.agh.edu.pl

executable Armstrong
    main-is: Main.hs
    other-modules:
        Armstrong
    build-depends:
        base ^>=4.14.3.0,
        arithmoi ^>=0.12.0.1
    hs-source-dirs: app
    default-language: Haskell2010
